--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "prepare-release": "One-step: clean, build, test, publish docs, and prep a release"
   },
   "engines": {
-    "node": ">=12.16.3 <13"
+    "node": ">=12.16.3 <=13.14.0"
   },
   "dependencies": {
     "axios": "^0.19.2"
